# ro

./: README.md  pyproject.toml
src/ro/: __init__.py  cli.py
src/ro/scripts/: ro
tests/: test-interactive
tests/ro/: test-main.sh
